docs/api/qiskit/0.33/qiskit.transpiler.passes.Collect2qBlocks.mdx
---
title: Collect2qBlocks (v0.33)
description: API reference for qiskit.transpiler.passes.Collect2qBlocks in qiskit v0.33
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.Collect2qBlocks
---

# Collect2qBlocks

<Class id="qiskit.transpiler.passes.Collect2qBlocks" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/transpiler/passes/optimization/collect_2q_blocks.py" signature="Collect2qBlocks(*args, **kwargs)" modifiers="class">
  Bases: `qiskit.transpiler.basepasses.AnalysisPass`

  Collect two-qubit subcircuits.

  ## Methods

  <span id="qiskit-transpiler-passes-collect2qblocks-name" />

  ### name

  <Function id="qiskit.transpiler.passes.Collect2qBlocks.name" signature="Collect2qBlocks.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-collect2qblocks-run" />

  ### run

  <Function id="qiskit.transpiler.passes.Collect2qBlocks.run" signature="Collect2qBlocks.run(dag)">
    Run the Collect2qBlocks pass on dag.

    The blocks contain “op” nodes in topological order such that all gates in a block act on the same qubits and are adjacent in the circuit.

    After the execution, `property_set['block_list']` is set to a list of tuples of “op” node.
  </Function>

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.Collect2qBlocks.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.Collect2qBlocks.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

